src/parser/syntax_analyzer.output
Terminals unused in grammar

    ERROR
    LOWER_THAN_ASIGN


Grammar

    0 $accept: Program $end

    1 Program: CompMod MainMod
    2        | MainMod

    3 CompMod: CompMod Decl
    4        | CompMod FuncDef
    5        | Decl
    6        | FuncDef

    7 MainMod: MainDef

    8 BType: INT
    9      | FLOAT

   10 Decl: ConstDecl
   11     | VarDecl
   12     | FuncDecl

   13 FuncDecl: BType IDENT LPARENTHESIS FuncParams RPARENTHESIS SEMICOLON
   14         | VOID IDENT LPARENTHESIS FuncParams RPARENTHESIS SEMICOLON
   15         | VOID IDENT LPARENTHESIS RPARENTHESIS SEMICOLON
   16         | BType IDENT LPARENTHESIS RPARENTHESIS SEMICOLON

   17 ConstDecl: CONST BType ConstDefList SEMICOLON

   18 ConstDefList: ConstDef
   19             | ConstDefList COMMA ConstDef

   20 ConstDef: IDENT ConstList ASSIGN ConstInit

   21 ConstList: ε
   22          | ConstList LBRACKET ConstExp RBRACKET

   23 ConstInit: ConstExp
   24          | LBRACE ConstInitList RBRACE
   25          | LBRACE RBRACE

   26 ConstInitList: ConstInit
   27              | ConstInitList COMMA ConstInit

   28 ConstExp: Add_Expr

   29 VarDecl: BType VarDeclList SEMICOLON

   30 VarDeclList: VarDef
   31            | VarDeclList COMMA VarDef

   32 VarDef: IDENT ConstList
   33       | IDENT ConstList ASSIGN InitVal

   34 InitVal: Expr
   35        | LBRACE InitValList RBRACE
   36        | LBRACE RBRACE

   37 InitValList: InitVal
   38            | InitValList COMMA InitVal

   39 FuncDef: BType IDENT LPARENTHESIS RPARENTHESIS Body
   40        | VOID IDENT LPARENTHESIS RPARENTHESIS Body
   41        | BType IDENT LPARENTHESIS FuncParams RPARENTHESIS Body
   42        | VOID IDENT LPARENTHESIS FuncParams RPARENTHESIS Body

   43 MainDef: INT MAIN LPARENTHESIS RPARENTHESIS Body
   44        | INT MAIN LPARENTHESIS VOID RPARENTHESIS Body

   45 FuncParams: FuncParam
   46           | FuncParams COMMA FuncParam
   47           | VOID

   48 FuncParam: BType IDENT
   49          | BType IDENT LBRACKET RBRACKET ExpList

   50 ExpList: ε
   51        | ExpList LBRACKET Expr RBRACKET

   52 Body: LBRACE BodyList RBRACE

   53 BodyList: ε
   54         | BodyList BodyItem

   55 BodyItem: Decl
   56         | stmt

   57 stmt: LVal ASSIGN Expr SEMICOLON
   58     | LVal ADASS Expr SEMICOLON
   59     | LVal SUASS Expr SEMICOLON
   60     | LVal MUASS Expr SEMICOLON
   61     | LVal DIASS Expr SEMICOLON
   62     | Expr SEMICOLON
   63     | Body
   64     | IFItem
   65     | WhileItem
   66     | jump_stmt
   67     | Forstmt

   68 Forstmt: FOR LPARENTHESIS ForInit SEMICOLON ForCond SEMICOLON ForIncr RPARENTHESIS stmt

   69 ForInit: Expr
   70        | ε

   71 ForCond: Cond
   72        | ε

   73 ForIncr: Expr
   74        | ε

   75 IFItem: IF LPARENTHESIS Cond RPARENTHESIS stmt
   76       | IF LPARENTHESIS Cond RPARENTHESIS stmt ELSE stmt

   77 WhileItem: WHILE LPARENTHESIS Cond RPARENTHESIS stmt

   78 jump_stmt: RETURN Expr SEMICOLON
   79          | RETURN SEMICOLON
   80          | BREAK SEMICOLON
   81          | CONTINUE SEMICOLON

   82 Expr: Add_Expr

   83 Cond: OR_Expr

   84 LVal: IDENT ExpList

   85 Primary_Expr: LPARENTHESIS Expr RPARENTHESIS
   86             | LVal
   87             | Number

   88 Number: Integer
   89       | Floatnum

   90 Unary_Expr: Primary_Expr
   91           | Func_Expr
   92           | ADD Unary_Expr
   93           | SUB Unary_Expr
   94           | NOT Unary_Expr

   95 Func_Expr: IDENT LPARENTHESIS FuncRParams RPARENTHESIS
   96          | IDENT LPARENTHESIS RPARENTHESIS

   97 FuncRParams: Expr
   98            | FuncRParams COMMA Expr

   99 MDM_Expr: Unary_Expr
  100         | MDM_Expr MUL Unary_Expr
  101         | MDM_Expr DIV Unary_Expr
  102         | MDM_Expr MOD Unary_Expr

  103 Add_Expr: MDM_Expr
  104         | Add_Expr ADD MDM_Expr
  105         | Add_Expr SUB MDM_Expr

  106 Rel_Expr: Add_Expr
  107         | Rel_Expr LT Add_Expr
  108         | Rel_Expr LET Add_Expr
  109         | Rel_Expr GT Add_Expr
  110         | Rel_Expr GET Add_Expr

  111 Eq_Expr: Rel_Expr
  112        | Eq_Expr EQ Rel_Expr
  113        | Eq_Expr NEQ Rel_Expr

  114 And_expr: Eq_Expr
  115         | And_expr AND Eq_Expr

  116 OR_Expr: And_expr
  117        | OR_Expr OR And_expr

  118 Integer: INTCONST

  119 Floatnum: FLOATCONST


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    LOWER_THAN_ELSE (258)
    ERROR <node> (259)
    ADD <node> (260) 92 104
    SUB <node> (261) 93 105
    MUL <node> (262) 100
    DIV <node> (263) 101
    MOD <node> (264) 102
    ADASS <node> (265) 58
    SUASS <node> (266) 59
    MUASS <node> (267) 60
    DIASS <node> (268) 61
    LT <node> (269) 107
    LET <node> (270) 108
    GT <node> (271) 109
    GET <node> (272) 110
    EQ <node> (273) 112
    NEQ <node> (274) 113
    LPARENTHESIS <node> (275) 13 14 15 16 39 40 41 42 43 44 68 75 76 77 85 95 96
    RPARENTHESIS <node> (276) 13 14 15 16 39 40 41 42 43 44 68 75 76 77 85 95 96
    LBRACKET <node> (277) 22 49 51
    RBRACKET <node> (278) 22 49 51
    LBRACE <node> (279) 24 25 35 36 52
    RBRACE <node> (280) 24 25 35 36 52
    ASSIGN <node> (281) 20 33 57
    COMMA <node> (282) 19 27 31 38 46 98
    SEMICOLON <node> (283) 13 14 15 16 17 29 57 58 59 60 61 62 68 78 79 80 81
    NOT <node> (284) 94
    AND <node> (285) 115
    OR <node> (286) 117
    INT <node> (287) 8 43 44
    FLOAT <node> (288) 9
    VOID <node> (289) 14 15 40 42 44 47
    CONST <node> (290) 17
    MAIN <node> (291) 43 44
    IF <node> (292) 75 76
    ELSE <node> (293) 76
    WHILE <node> (294) 77
    BREAK <node> (295) 80
    CONTINUE <node> (296) 81
    RETURN <node> (297) 78 79
    FOR <node> (298) 68
    IDENT <node> (299) 13 14 15 16 20 32 33 39 40 41 42 48 49 84 95 96
    INTCONST <node> (300) 118
    FLOATCONST <node> (301) 119
    LOWER_THAN_ASIGN (302)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    Program <node> (49)
        on left: 1 2
        on right: 0
    CompMod <node> (50)
        on left: 3 4 5 6
        on right: 1 3 4
    MainMod <node> (51)
        on left: 7
        on right: 1 2
    BType <node> (52)
        on left: 8 9
        on right: 13 16 17 29 39 41 48 49
    Decl <node> (53)
        on left: 10 11 12
        on right: 3 5 55
    FuncDecl <node> (54)
        on left: 13 14 15 16
        on right: 12
    ConstDecl <node> (55)
        on left: 17
        on right: 10
    ConstDefList <node> (56)
        on left: 18 19
        on right: 17 19
    ConstDef <node> (57)
        on left: 20
        on right: 18 19
    ConstList <node> (58)
        on left: 21 22
        on right: 20 22 32 33
    ConstInit <node> (59)
        on left: 23 24 25
        on right: 20 26 27
    ConstInitList <node> (60)
        on left: 26 27
        on right: 24 27
    ConstExp <node> (61)
        on left: 28
        on right: 22 23
    VarDecl <node> (62)
        on left: 29
        on right: 11
    VarDeclList <node> (63)
        on left: 30 31
        on right: 29 31
    VarDef <node> (64)
        on left: 32 33
        on right: 30 31
    InitVal <node> (65)
        on left: 34 35 36
        on right: 33 37 38
    InitValList <node> (66)
        on left: 37 38
        on right: 35 38
    FuncDef <node> (67)
        on left: 39 40 41 42
        on right: 4 6
    MainDef <node> (68)
        on left: 43 44
        on right: 7
    FuncParams <node> (69)
        on left: 45 46 47
        on right: 13 14 41 42 46
    FuncParam <node> (70)
        on left: 48 49
        on right: 45 46
    ExpList <node> (71)
        on left: 50 51
        on right: 49 51 84
    Body <node> (72)
        on left: 52
        on right: 39 40 41 42 43 44 63
    BodyList <node> (73)
        on left: 53 54
        on right: 52 54
    BodyItem <node> (74)
        on left: 55 56
        on right: 54
    stmt <node> (75)
        on left: 57 58 59 60 61 62 63 64 65 66 67
        on right: 56 68 75 76 77
    Forstmt <node> (76)
        on left: 68
        on right: 67
    ForInit <node> (77)
        on left: 69 70
        on right: 68
    ForCond <node> (78)
        on left: 71 72
        on right: 68
    ForIncr <node> (79)
        on left: 73 74
        on right: 68
    IFItem <node> (80)
        on left: 75 76
        on right: 64
    WhileItem <node> (81)
        on left: 77
        on right: 65
    jump_stmt <node> (82)
        on left: 78 79 80 81
        on right: 66
    Expr <node> (83)
        on left: 82
        on right: 34 51 57 58 59 60 61 62 69 73 78 85 97 98
    Cond <node> (84)
        on left: 83
        on right: 71 75 76 77
    LVal <node> (85)
        on left: 84
        on right: 57 58 59 60 61 86
    Primary_Expr <node> (86)
        on left: 85 86 87
        on right: 90
    Number <node> (87)
        on left: 88 89
        on right: 87
    Unary_Expr <node> (88)
        on left: 90 91 92 93 94
        on right: 92 93 94 99 100 101 102
    Func_Expr <node> (89)
        on left: 95 96
        on right: 91
    FuncRParams <node> (90)
        on left: 97 98
        on right: 95 98
    MDM_Expr <node> (91)
        on left: 99 100 101 102
        on right: 100 101 102 103 104 105
    Add_Expr <node> (92)
        on left: 103 104 105
        on right: 28 82 104 105 106 107 108 109 110
    Rel_Expr <node> (93)
        on left: 106 107 108 109 110
        on right: 107 108 109 110 111 112 113
    Eq_Expr <node> (94)
        on left: 111 112 113
        on right: 112 113 114 115
    And_expr <node> (95)
        on left: 114 115
        on right: 115 116 117
    OR_Expr <node> (96)
        on left: 116 117
        on right: 83 117
    Integer <node> (97)
        on left: 118
        on right: 88
    Floatnum <node> (98)
        on left: 119
        on right: 89


State 0

    0 $accept: • Program $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3
    CONST  shift, and go to state 4

    Program    go to state 5
    CompMod    go to state 6
    MainMod    go to state 7
    BType      go to state 8
    Decl       go to state 9
    FuncDecl   go to state 10
    ConstDecl  go to state 11
    VarDecl    go to state 12
    FuncDef    go to state 13
    MainDef    go to state 14


State 1

    8 BType: INT •
   43 MainDef: INT • MAIN LPARENTHESIS RPARENTHESIS Body
   44        | INT • MAIN LPARENTHESIS VOID RPARENTHESIS Body

    MAIN  shift, and go to state 15

    $default  reduce using rule 8 (BType)


State 2

    9 BType: FLOAT •

    $default  reduce using rule 9 (BType)


State 3

   14 FuncDecl: VOID • IDENT LPARENTHESIS FuncParams RPARENTHESIS SEMICOLON
   15         | VOID • IDENT LPARENTHESIS RPARENTHESIS SEMICOLON
   40 FuncDef: VOID • IDENT LPARENTHESIS RPARENTHESIS Body
   42        | VOID • IDENT LPARENTHESIS FuncParams RPARENTHESIS Body

    IDENT  shift, and go to state 16


State 4

   17 ConstDecl: CONST • BType ConstDefList SEMICOLON

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 2

    BType  go to state 18


State 5

    0 $accept: Program • $end

    $end  shift, and go to state 19


State 6

    1 Program: CompMod • MainMod
    3 CompMod: CompMod • Decl
    4        | CompMod • FuncDef

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3
    CONST  shift, and go to state 4

    MainMod    go to state 20
    BType      go to state 8
    Decl       go to state 21
    FuncDecl   go to state 10
    ConstDecl  go to state 11
    VarDecl    go to state 12
    FuncDef    go to state 22
    MainDef    go to state 14


State 7

    2 Program: MainMod •

    $default  reduce using rule 2 (Program)


State 8

   13 FuncDecl: BType • IDENT LPARENTHESIS FuncParams RPARENTHESIS SEMICOLON
   16         | BType • IDENT LPARENTHESIS RPARENTHESIS SEMICOLON
   29 VarDecl: BType • VarDeclList SEMICOLON
   39 FuncDef: BType • IDENT LPARENTHESIS RPARENTHESIS Body
   41        | BType • IDENT LPARENTHESIS FuncParams RPARENTHESIS Body

    IDENT  shift, and go to state 23

    VarDeclList  go to state 24
    VarDef       go to state 25


State 9

    5 CompMod: Decl •

    $default  reduce using rule 5 (CompMod)


State 10

   12 Decl: FuncDecl •

    $default  reduce using rule 12 (Decl)


State 11

   10 Decl: ConstDecl •

    $default  reduce using rule 10 (Decl)


State 12

   11 Decl: VarDecl •

    $default  reduce using rule 11 (Decl)


State 13

    6 CompMod: FuncDef •

    $default  reduce using rule 6 (CompMod)


State 14

    7 MainMod: MainDef •

    $default  reduce using rule 7 (MainMod)


State 15

   43 MainDef: INT MAIN • LPARENTHESIS RPARENTHESIS Body
   44        | INT MAIN • LPARENTHESIS VOID RPARENTHESIS Body

    LPARENTHESIS  shift, and go to state 26


State 16

   14 FuncDecl: VOID IDENT • LPARENTHESIS FuncParams RPARENTHESIS SEMICOLON
   15         | VOID IDENT • LPARENTHESIS RPARENTHESIS SEMICOLON
   40 FuncDef: VOID IDENT • LPARENTHESIS RPARENTHESIS Body
   42        | VOID IDENT • LPARENTHESIS FuncParams RPARENTHESIS Body

    LPARENTHESIS  shift, and go to state 27


State 17

    8 BType: INT •

    $default  reduce using rule 8 (BType)


State 18

   17 ConstDecl: CONST BType • ConstDefList SEMICOLON

    IDENT  shift, and go to state 28

    ConstDefList  go to state 29
    ConstDef      go to state 30


State 19

    0 $accept: Program $end •

    $default  accept


State 20

    1 Program: CompMod MainMod •

    $default  reduce using rule 1 (Program)


State 21

    3 CompMod: CompMod Decl •

    $default  reduce using rule 3 (CompMod)


State 22

    4 CompMod: CompMod FuncDef •

    $default  reduce using rule 4 (CompMod)


State 23

   13 FuncDecl: BType IDENT • LPARENTHESIS FuncParams RPARENTHESIS SEMICOLON
   16         | BType IDENT • LPARENTHESIS RPARENTHESIS SEMICOLON
   32 VarDef: IDENT • ConstList
   33       | IDENT • ConstList ASSIGN InitVal
   39 FuncDef: BType IDENT • LPARENTHESIS RPARENTHESIS Body
   41        | BType IDENT • LPARENTHESIS FuncParams RPARENTHESIS Body

    LPARENTHESIS  shift, and go to state 31

    $default  reduce using rule 21 (ConstList)

    ConstList  go to state 32


State 24

   29 VarDecl: BType VarDeclList • SEMICOLON
   31 VarDeclList: VarDeclList • COMMA VarDef

    COMMA      shift, and go to state 33
    SEMICOLON  shift, and go to state 34


State 25

   30 VarDeclList: VarDef •

    $default  reduce using rule 30 (VarDeclList)


State 26

   43 MainDef: INT MAIN LPARENTHESIS • RPARENTHESIS Body
   44        | INT MAIN LPARENTHESIS • VOID RPARENTHESIS Body

    RPARENTHESIS  shift, and go to state 35
    VOID          shift, and go to state 36


State 27

   14 FuncDecl: VOID IDENT LPARENTHESIS • FuncParams RPARENTHESIS SEMICOLON
   15         | VOID IDENT LPARENTHESIS • RPARENTHESIS SEMICOLON
   40 FuncDef: VOID IDENT LPARENTHESIS • RPARENTHESIS Body
   42        | VOID IDENT LPARENTHESIS • FuncParams RPARENTHESIS Body
